server/7.2/install/upgrade-feature-availability.md
---
title: Feature Availability During Upgrade
description: During the cluster-upgrade procedure, some features may not be available.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-server/edit/release/7.2/modules/install/pages/upgrade-feature-availability.adoc
  xref: xref:7.2@server:install:upgrade-feature-availability.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/server/7.2/install/upgrade-feature-availability.html)

# Feature Availability During Upgrade

During the cluster-upgrade procedure, some features may not be available.

## [](#understanding-feature-availability)Understanding Feature Availability

The process of upgrading a cluster involves upgrading each node individually, from a lower version of Couchbase Server to a higher. Node-upgrades occur sequentially. Consequently, during the overall cluster-upgrade process, the cluster runs in _mixed mode_; meaning that some nodes are running the lower version, and others the higher.

Since a higher version of Couchbase Server always introduces features not provided by a lower, such features should not be used during the upgrade process, unless such use is explicitly supported in mixed-mode conditions. When cluster-upgrade is complete, all the features of the higher version of Couchbase Server can be used.

The following table summarizes the new features in Couchbase Server Enterprise Edition Version 7.0 and later, and indicates whether or not they can be used in the mixed-mode conditions that exist during the cluster-upgrade process. _Usable in mixed mode_ indicates that the feature can be used (though not necessarily across the entire cluster) as long as one node is running the higher version. _Not usable in mixed mode_ indicates that cluster-upgrade must be fully completed, before the feature can be used in any way.

| Feature                                                                              | Whether Usable in Mixed Mode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| ------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [Scopes & Collections](../learn/data/scopes-and-collections.md)                      | Not usable in mixed mode. During upgrade, all documents on an upgraded node appear in the \_default collection, within the \_default scope. No new scope or collection can be defined until all nodes have been upgraded. XDCR cannot be used to specify scopes or collections as either sources or targets for replication until all nodes have been upgraded.                                                                                                                                                                                                                                                                   |
| [Metrics](../metrics-reference/metrics-reference.md)                                 | Usable in mixed mode for upgraded nodes. When all nodes have been upgraded, usable for entire cluster. Note that pre-7.0 statistics are deleted from each node when the node is upgraded.                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [Magma](../learn/buckets-memory-and-storage/storage-engines.md#storage-engine-magma) | Not usable in mixed mode. Magma should not be switched on until all nodes have been upgraded.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [Change History](../learn/data/change-history.md)                                    | Usable only with Magma, and therefore not usable in mixed mode.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [Bucket-Assigned Durability Levels](../learn/data/durability.md#specifying-levels)   | When a Data Service node is upgraded from a version less than 6.6, the durability-level setting for all the node's vBuckets is set to _none_. Bucket durability-levels should not be modified until after the completion of cluster-upgrade. When a Data Service node is upgraded from Version 6.6, all bucket durability-level settings remain unchanged. Applications that use durable writes can continue to access data throughout the upgrade.                                                                                                                                                                               |
| [On-the-Wire Security](../learn/security/on-the-wire-security.md)                    | On-the-wire security-features introduced in 7.0 are not usable in mixed mode. These features, including TLS 1.3 support, should be used only following the completion of cluster-upgrade. If, at that time, a TLS version is changed, existing connections are not dropped, and so continue with their previously established TLS version: the new TLS version will be established for future connections.                                                                                                                                                                                                                        |
| [Backup Service](../learn/services-and-indexes/services/backup-service.md)           | Not usable in mixed mode. All nodes in the cluster should first be upgraded.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| Analytics Service                                                                    | No new Analytics-Service feature is usable in mixed mode. All nodes in the cluster must be upgraded, before new Analytics-Service features can be used.                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| Query Service                                                                        | The [Index Advisor](../tools/query-workbench.md#index-advisor) and [Memory-Usage Quota Setting](../settings/query-settings.md) are usable in mixed mode. [Flex Indexes](../n1ql/n1ql-language-reference/flex-indexes.md), though not a new feature, are usable in mixed mode only if the cluster being upgraded is at least version 6.5. The [Cost-Based Optimizer](../n1ql/n1ql-language-reference/cost-based-optimizer.md), [SQL++ Support for Couchbase Transactions](../n1ql/n1ql-language-reference/transactions.md), and [User-Defined Functions](../n1ql/n1ql-language-reference/userfun.md) are not usable in mixed mode. |
| [System Events](../learn/clusters-and-availability/system-events.md)                 | System Events can only be used when every node in the cluster is running a version of Couchbase Server that is 7.1 or later.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| network=external                                                                     | The network=external option, used to specify an alternate address when using cbbackupmgr, cbimport, and cbexport, can be used in mixed mode. See **Host Formats** information in [cbbackupmgr](../backup-restore/cbbackupmgr.md), [cbimport](../tools/cbimport.md), and [cbexport](../tools/cbexport.md).                                                                                                                                                                                                                                                                                                                         |